--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todos",
   "private": true,
-  "description": null,
+  "description": "React Typescript TodosMVC",
   "version": "0.0.2",
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.11",
@@ -12,7 +12,10 @@
     "prop-types": "15.6.0",
     "react": "15.6.2",
     "react-apollo": "2.1.0-rc.5",
-    "react-dom": "15.6.2"
+    "react-dom": "15.6.2",
+    "todomvc-app-css": "^2.0.0",
+    "todomvc-common": "^1.0.1"
+
   },
   "devDependencies": {
     "react-scripts": "1.0.0"
@@ -22,5 +25,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5"
   }
+
 }
