--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
+    "react-apollo-hooks": "0.5.0-alpha.0",
     "react-dom": "^16.8.6",
     "todomvc-app-css": "^2.0.0",
     "todomvc-common": "^1.0.1"
