--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React + Apollo GraphQL TodosMVC",
   "version": "0.0.2",
   "dependencies": {
-    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.5.1",
     "classnames": "^2.2.6",
     "graphql": "^14.2.1",
@@ -27,7 +27,7 @@
   },
   "prettier": {
     "printWidth": 120,
-    "semi": true,
+    "semi": false,
     "singleQuote": true,
     "trailingComma": "es5"
   },
