--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React + Apollo GraphQL TodosMVC",
   "version": "0.0.2",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.5.1",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.5.1",
     "classnames": "^2.2.6",
