--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-apollo-hooks": "0.5.0-alpha.0",
     "react-dom": "^16.8.6",
     "todomvc-app-css": "^2.0.0",
-    "todomvc-common": "^1.0.1"
+    "todomvc-common": "^1.0.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "react-scripts": "3.0.0"
