--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "react-scripts": "3.0.0"
+    "apollo-link-mock": "^1.0.1",
+    "jest": "^24.7.1",
+    "react-scripts": "3.0.0",
+    "react-testing-library": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
